--- a/public/child-progress.html
+++ b/public/child-progress.html
@@ -497,25 +497,20 @@
     <nav class="navbar">
         <div class="navbar-container">
             <a href="/" class="navbar-brand">
-                <span class="navbar-logo">🤖</span>
-                <span>LearnToBot</span>
+                <img src="assets/logo.png" alt="LearnToBot" class="navbar-logo-img">
+                <span class="brand-text">LEARNTOBOT</span>
             </a>
 
             <!-- Mobile menu button handled by mobile-nav.js -->
 
-            <!-- Menu items will be populated/managed by mobile-nav.js but we put base structure -->
-            <!-- Standardized Menu from index.html -->
             <ul class="navbar-menu">
                 <li><a href="/" class="navbar-link">Projects</a></li>
-                <li><a href="/my-projects.html" class="navbar-link" id="navMyProjects" style="display: none;">My
-                        Projects</a></li>
                 <li><a href="/child-progress.html" class="navbar-link active">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
                 <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
                         style="display: none;">Analytics</a></li>
                 <li><a href="/instructor-dashboard.html" class="navbar-link">Instructors</a></li>
-                <li><a href="#" onclick="logout(); return false;" class="navbar-link logout-link">Logout</a></li>
             </ul>
 
             <div class="navbar-auth">
